apps/paperless/paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
spec:
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/media
              name: media
            - mountPath: /usr/src/paperless/export
              name: export
            - mountPath: /usr/src/paperless/consume
              name: consume
      volumes:
        - name: consume
          nfs:
            path: /mnt/disk1/paperless-ngx/paperless/consume
            server: 192.168.0.14
        - name: export
          nfs:
            path: /mnt/disk1/paperless-ngx/paperless/export
            server: 192.168.0.14
        - name: data
          nfs:
            path: /mnt/disk1/paperless-ngx/paperless/data
            server: 192.168.0.14
        - name: media
          nfs:
            path: /mnt/disk1/paperless-ngx/paperless/media
            server: 192.168.0.14
